joining and creating rooms

--- a/qwixx.Backend/Cargo.toml
+++ b/qwixx.Backend/Cargo.toml
@@ -19,3 +19,4 @@ tower-http = { version = "0.5", features = ["cors", "fs"] }
 tower = "0.5"
 chrono = { version = "0.4", features = ["serde"] }
 uuid = { version = "1.10", features = ["v4", "fast-rng"] }
+rand = "0.8.5"
