--- a/qwixx.Backend/Cargo.toml
+++ b/qwixx.Backend/Cargo.toml
@@ -8,7 +8,11 @@ license = "MIT"
 rust-version = "1.80"
 
 [dependencies]
-socketioxide = { version = "0.14", features = ["state"] }
+socketioxide = { version = "0.14", features = [
+    "state",
+    "extensions",
+    "tracing",
+] }
 tokio = { version = "1.39", features = ["full"] }
 tracing = "0.1"
 tracing-subscriber = "0.3"
@@ -18,5 +22,9 @@ serde_json = "1.0"
 tower-http = { version = "0.5", features = ["cors", "fs"] }
 tower = "0.5"
 chrono = { version = "0.4", features = ["serde"] }
-uuid = { version = "1.10", features = ["v4", "fast-rng"] }
-rand = "0.8.5"
+uuid = { version = "1.10", features = ["v4", "fast-rng", "serde"] }
+rand = "0.8"
+jwt-simple = { version = "0.12", default-features = false, features = [
+    "pure-rust",
+] }
+dotenv = "0.15"
