--- a/.github/workflows/qwixx-backend-deploy.yml
+++ b/.github/workflows/qwixx-backend-deploy.yml
@@ -30,6 +30,6 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
         with:
-          context: ./backend
+          context: ./qwixx.Backend
           push: true
           tags: y3ll0w/qwixx-backend:latest
